# DomePick

./: .gitignore  LICENSE  README.md  main.py
models/: AgeGenderModel.py  RetinaFace.py  net_utils.py
run_by_tensorrt/: CMakeLists.txt
run_by_tensorrt/.cache/clangd/index/: face_detector.cpp.326DF91F9249ECA6.idx  main.cpp.1C7D2214CFCFD45A.idx
run_by_tensorrt/src/: age_gender.cpp  age_gender.h  decode_face.cpp  decode_face.h  face_detector.cpp  face_detector.h  json_converter.cpp  json_converter.h  main.cpp  run.cpp  run.h  utils.h
server/: app.py
server/static/: style.css
server/templates/: index.html
test/: test_RetinaFace.py
train/: train_agegender.py
utils/: 2onnx.py  onnx2tensorrt.py
weights/: retinaface.onnx  retinaface.trt
